discussion/kv_engine/170521/170521_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Create json_validator library

This is currently a wrapper on top of JSON_checker,
and the main purpose of the library is to make it
easy to flip the underlying library without having
to manually update code in a lot of other locations
in order to flip the backend.

Change-Id: I527012ecccfe1cd43c0794361b159f0e7f3c7c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-11 13:00:29.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 13:25:27.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17576/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18309/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18309/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18309/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25676/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25676/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5242/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5242/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17271/ : ABORTED

Failure of GoogleTest "TransportProtocols/WithMetaTest.MB36304_DocumentMaxSizeWithXattr/McbpSsl_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/WithMetaTest.MB36304_DocumentMaxSizeWithXattr/McbpSsl_XattrYes_JsonNo_SnappyYes
[2022-02-11T13:24:54.470Z] unknown file: Failure
[2022-02-11T13:24:54.470Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-02-11T13:24:54.470Z] [  FAILED  ] TransportProtocols/WithMetaTest.MB36304_DocumentMaxSizeWithXattr/McbpSsl_XattrYes_JsonNo_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (340 ms)
TransportProtocols/WithMetaTest.MB36304_DocumentMaxSizeWithXattr/McbpSsl_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17271/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17271/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14376/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/json/syntax_validator.cc b/json/syntax_validator.cc
index cb22c14ab..38f6266c3 100644
--- a/json/syntax_validator.cc
+++ b/json/syntax_validator.cc
@@ -58,7 +58,8 @@ std::string to_string(const cb::json::SyntaxValidator::Type&amp; type) {
     return &quot;Unknown: &quot; + std::to_string(int(type));
 }
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; type) {
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; type) {
     os &lt;&lt; to_string(type);
     return os;
 }
diff --git a/json/syntax_validator.h b/json/syntax_validator.h
index ad988f7e8..e2c85989f 100644
--- a/json/syntax_validator.h
+++ b/json/syntax_validator.h
@@ -11,8 +11,8 @@
 #pragma once
 
 #include &lt;memory&gt;
-#include &lt;string_view&gt;
 #include &lt;ostream&gt;
+#include &lt;string_view&gt;
 
 namespace cb::json {
 
@@ -34,5 +34,6 @@ public:
 
 } // namespace cb::json
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; t);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; t);
 std::string to_string(const cb::json::SyntaxValidator::Type&amp; type);
diff --git a/json/syntax_validator_bench.cc b/json/syntax_validator_bench.cc
index 35a07a306..cfad728b7 100644
--- a/json/syntax_validator_bench.cc
+++ b/json/syntax_validator_bench.cc
@@ -87,7 +87,9 @@ static void BM_SyntaxValidator_NlohmannJsonArray(benchmark::State&amp; state) {
     benchmarkJsonValidator(
             SyntaxValidator::Type::Nlohmann, state, makeArray(state), true);
 }
-BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)-&gt;RangeMultiplier(10)-&gt;Range(1, 10000);
+BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)
+        -&gt;RangeMultiplier(10)
+        -&gt;Range(1, 10000);
 
 // Benchmark checking a nested JSON dictonary as JSON; e.g.
 //   {&quot;0&quot;: { &quot;1&quot;: { ... }}}

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14376/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15534/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
    return cb::xattr::validate(*validator, view);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:79:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    unsigned char mb15778[] = {""", 0xff, 0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:84:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    unsigned char mb15778[] = {""", "a", 0xff, 0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:90:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    unsigned char mb15778[] = {""", "1", "2", 0xfe, 0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:95:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    unsigned char mb15778[] = {""", "1", "2", 0xfd, 0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:100:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    unsigned char mb15778[] = {"{", """, "k", """, ":", """, 0xfc, 0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_test.cc:105:11: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    const char value1[] = "{\"test\": 12}";
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15534/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15534/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43849/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43849/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36970/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36970/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16350/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16350/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5181/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
